@@ -1,3 +1,9 @@
+Fri Jul 19 23:46:39 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>
+
+	* users.c (trivfs_S_file_access): Implement locally always
+	returning all access.  Eventually, this needs to do the right
+	thing when trivfs wises up wrt modes.
+
 Tue Jul 16 20:49:29 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>
 
 	* users.c (trivfs_S_io_read): Bother to set atime when
